// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field tests render should render not side by side 1`] = `
<div
  className="field-wrapper"
>
  <p
    className="field-label"
  >
    Email:
  </p>
  <div
    className="field-outer"
  >
    <input
      autoComplete="on"
      className="field normal primary field-error-border"
      content=""
      error={Object {}}
      id="email"
      kind="primary"
      label="Email:"
      name="email"
      onChange={[Function]}
      placeholder="Enter email..."
      size="normal"
      type="email"
      value=""
    />
    <p
      className="field-error-label"
    >
      <Component />
    </p>
  </div>
</div>
`;

exports[`Field tests render should render the first side by side input 1`] = `
<div
  className="field-wrapper inline-field"
>
  <p
    className="field-label"
  >
    Email:
  </p>
  <div
    className="field-outer"
  >
    <input
      autoComplete="on"
      className="field normal primary first-side-by-side-input field-error-border"
      content=""
      error={Object {}}
      id="email"
      kind="primary"
      label="Email:"
      name="email"
      onChange={[Function]}
      placeholder="Enter email..."
      sidebyside={1}
      size="normal"
      type="email"
      value=""
    />
    <p
      className="field-error-label"
    >
      <Component />
    </p>
  </div>
</div>
`;

exports[`Field tests render should render the second side by side input 1`] = `
<div
  className="field-wrapper inline-field"
>
  <p
    className="field-label"
  >
    Email:
  </p>
  <div
    className="field-outer"
  >
    <input
      autoComplete="on"
      className="field normal primary second-side-by-side-input field-error-border"
      content=""
      error={Object {}}
      id="email"
      kind="primary"
      label="Email:"
      name="email"
      onChange={[Function]}
      placeholder="Enter email..."
      sidebyside={2}
      size="normal"
      type="email"
      value=""
    />
    <p
      className="field-error-label"
    >
      <Component />
    </p>
  </div>
</div>
`;

exports[`Field tests render should render with errors correctly 1`] = `
<div
  className="field-wrapper"
>
  <p
    className="field-label"
  >
    Email:
  </p>
  <div
    className="field-outer"
  >
    <input
      autoComplete="on"
      className="field normal primary field-error-border"
      content=""
      error="Big bad error"
      id="email"
      kind="primary"
      label="Email:"
      name="email"
      onChange={[Function]}
      placeholder="Enter email..."
      size="normal"
      type="email"
      value=""
    />
    <p
      className="field-error-label"
    >
      Big bad error
    </p>
  </div>
</div>
`;

exports[`Field tests render should render without errors correctly 1`] = `
<div
  className="field-wrapper"
>
  <p
    className="field-label"
  >
    Email:
  </p>
  <div
    className="field-outer"
  >
    <input
      autoComplete="on"
      className="field normal primary"
      content=""
      error={null}
      id="email"
      kind="primary"
      label="Email:"
      name="email"
      onChange={[Function]}
      placeholder="Enter email..."
      size="normal"
      type="email"
      value=""
    />
    <p
      className="field-error-label"
    />
  </div>
</div>
`;
